# minio-quota-manager

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 20bb0acc3ca2_create_tables.py
app/: celery.py  config.py  core.py  minio_utils.py  utils.py
app/db/: crud.py  models.py  utils.py
app/schemas/: models.py
